--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -68,11 +68,11 @@
 
       <!-- Actions -->
       <div class="flex space-x-2">
-        <%= link_to "View", admin_project_path(project),
+        <%= link_to "View", project_path(project),
             class: "flex-1 bg-indigo-600 text-white text-center py-2 px-3 rounded-md text-sm hover:bg-indigo-700 transition-colors" %>
-        <%= link_to "Issues", admin_project_issues_path(project),
+        <%= link_to "Issues", project_issues_path(project),
             class: "flex-1 bg-gray-100 text-gray-700 text-center py-2 px-3 rounded-md text-sm hover:bg-gray-200 transition-colors" %>
-        <%= link_to "Edit", edit_admin_project_path(project),
+        <%= link_to "Edit", edit_project_path(project),
             class: "bg-gray-100 text-gray-700 py-2 px-3 rounded-md text-sm hover:bg-gray-200 transition-colors" %>
       </div>
     </div>
