--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -26,7 +26,7 @@
       <div class="bg-gray-900 text-white w-64 min-h-screen p-4">
         <div class="flex items-center mb-8">
           <div class="bg-indigo-600 rounded-lg p-2 mr-3">
-            <span class="text-white font-bold">AR</span>
+            <span class="text-white font-bold"></span>
           </div>
           <span class="text-xl font-bold">ActiveRabbit</span>
         </div>
